force-app/main/default/objects/Finance_Report_Records__c/Finance_Report_Records__c.object-meta.xml
<CustomObject>
    <label>Finance Report Record</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Finance Report Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Report Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>