force-app/main/default/objects/Finance_Report_Records__c/fields/Adjustment_Entry__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Entry__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Adjustment_Entry__c,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Adjustment_Entry__c,
If(Not(ISBLANK(Transfer_Amount__c)), false,
If(Not(ISBLANK(Registration_Payment_Account__c)), false, false))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Entry</label>
    <type>Checkbox</type>
</CustomField>