force-app/main/default/objects/Finance_Report_Records__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Booking__r.Booking_Date__c,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Booking__r.Booking_Date__c,
If(Not(ISBLANK(Transfer_Amount__c)), null,
If(Not(ISBLANK(Registration_Payment_Account__c)), null, null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>