force-app/main/default/objects/Finance_Report_Records__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), &apos;&apos;,
If(Not(ISBLANK(Receipt__c)), &apos;&apos;,
If(Not(ISBLANK(Transfer_Amount__c)), &apos;&apos;,
If(Not(ISBLANK(Registration_Payment_Account__c)), &apos;&apos;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Name</label>
    <type>Text</type>
</CustomField>