force-app/main/default/objects/Finance_Report_Records__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Booking__r.Tower__c,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Booking__r.Tower__c,
If(Not(ISBLANK(Transfer_Amount__c)), Transfer_Amount__r.Booking__r.Tower__c ,
If(Not(ISBLANK(Registration_Payment_Account__c)), Registration_Payment_Account__r.Booking__r.Tower__c, &apos;&apos;))))</formula>
    <label>Building Name</label>
    <type>Text</type>
</CustomField>