force-app/main/default/objects/Finance_Report_Records__c/fields/Business_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Name__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), Transfer_Amount__r.Business_Unit__c, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), Registration_Payment_Account__r.Business_Unit__c,  
If(NOT(ISBLANK(Demand__c)), Demand__r.Business_Unit__c,  
If(NOT(ISBLANK(Receipt__c)),Project_Name__c,  
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Name</label>
    <type>Text</type>
</CustomField>