force-app/main/default/objects/Finance_Report_Records__c/fields/Cheque_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Deposit_Date__c</fullName>
    <formula>Receipt__r.Cheque_Deposit_Date__c</formula>
    <label>Cheque Deposit Date</label>
    <type>Date</type>
</CustomField>