force-app/main/default/objects/Finance_Report_Records__c/fields/Cheque_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Cheque_on_Hold__c</fullName>
    <formula>ISPICKVAL(Receipt__r.Receipt_Status__c,&apos;Cheque Hold&apos;)</formula>
    <label>Cheque on Hold?</label>
    <type>Checkbox</type>
</CustomField>