force-app/main/default/objects/Finance_Report_Records__c/fields/Credit_Amount_AED_Corp__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount_AED_Corp__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), 0, 
If(NOT(ISBLANK(Registration_Payment_Account__c)),0,  
If(NOT(ISBLANK(Demand__c)), 0,  
If(NOT(ISBLANK(Receipt__c)), Receipt__r.Corporate_Collection_Control_Report__c,  
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Amount (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>