force-app/main/default/objects/Finance_Report_Records__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), &apos;AED&apos;, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), &apos;AED&apos;,  
If(NOT(ISBLANK(Demand__c)), &apos;&apos;,  
If(NOT(ISBLANK(Receipt__c)), TEXT(Receipt__r.Currency__c),  
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>