force-app/main/default/objects/Finance_Report_Records__c/fields/Debit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Debit_Account_Name__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Total_Amount_Account__r.Name,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Debit_Account__r.Name,
If(Not(ISBLANK(Transfer_Amount__c)), &apos;&apos;,
If(Not(ISBLANK(Registration_Payment_Account__c)), &apos;&apos; , &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Account Name</label>
    <type>Text</type>
</CustomField>