force-app/main/default/objects/Finance_Report_Records__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), &apos;&apos;,
If(NOT(ISBLANK(Registration_Payment_Account__c)), &apos;&apos;,
If(NOT(ISBLANK(Receipt__c)), &apos;&apos;,
If(NOT(ISBLANK(Demand__c)), TEXT(Demand__r.Demand_Status__c),
&apos;&apos;))))</formula>
    <label>Demand Status</label>
    <type>Text</type>
</CustomField>