force-app/main/default/objects/Finance_Report_Records__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>OLD Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Receipt</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Debit Note</fullName>
            </value>
            <value>
                <fullName>Transfer Amount</fullName>
            </value>
            <value>
                <fullName>Registration Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>