force-app/main/default/objects/Finance_Report_Records__c/fields/Front_Office_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Front_Office_Remarks__c</fullName>
    <formula>Receipt__r.Front_Office_Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Front Office Remarks</label>
    <type>Text</type>
</CustomField>