force-app/main/default/objects/Finance_Report_Records__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), Transfer_Amount__r.GL_Date__c, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), Registration_Payment_Account__r.GL_Date__c,  
If(NOT(ISBLANK(Demand__c)), Demand__r.GL_Date__c,  
If(NOT(ISBLANK(Receipt__c)), Receipt__r.GL_Date__c,  
null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>