force-app/main/default/objects/Finance_Report_Records__c/fields/Legacy_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Booking_Id__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Legacy_Booking_Id__c,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Legacy_Booking_Id__c,
If(Not(ISBLANK(Transfer_Amount__c)), &apos;&apos;,
If(Not(ISBLANK(Registration_Payment_Account__c)), &apos;&apos;, &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Booking Id</label>
    <type>Text</type>
</CustomField>