force-app/main/default/objects/Finance_Report_Records__c/fields/Other_Charges_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Type__c</fullName>
    <formula>Text(Receipt__r.Other_Charges_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Charges Type</label>
    <type>Text</type>
</CustomField>