force-app/main/default/objects/Finance_Report_Records__c/fields/Process_CR__c.field-meta.xml
<CustomField>
    <fullName>Process_CR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process CR</label>
    <type>Checkbox</type>
</CustomField>