force-app/main/default/objects/Finance_Report_Records__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Booking__r.Agreement_Value__c ,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Booking__r.Agreement_Value__c ,
If(Not(ISBLANK(Transfer_Amount__c)), Transfer_Amount__r.Booking__r.Agreement_Value__c,
If(Not(ISBLANK(Registration_Payment_Account__c)), Registration_Payment_Account__r.Booking__r.Agreement_Value__c, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>