force-app/main/default/objects/Finance_Report_Records__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Finance Report Records</relationshipLabel>
    <relationshipName>Finance_Report_Records</relationshipName>
    <type>Lookup</type>
</CustomField>