force-app/main/default/objects/Finance_Report_Records__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), null, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), null,  
If(NOT(ISBLANK(Demand__c)), null,  
If(NOT(ISBLANK(Receipt__c)), Receipt__r.Receipt_Date__c,  
null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>