force-app/main/default/objects/Finance_Report_Records__c/fields/Receipt_Rejection_Description__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Rejection_Description__c</fullName>
    <formula>Receipt__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Rejection Description</label>
    <type>Text</type>
</CustomField>