force-app/main/default/objects/Finance_Report_Records__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), &apos;Cleared&apos;, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), &apos;Cleared&apos;,  
If(NOT(ISBLANK(Demand__c)), &apos;&apos;,  
If(NOT(ISBLANK(Receipt__c)), TEXT(Receipt__r.Receipt_Status__c),  
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Status</label>
    <type>Text</type>
</CustomField>