force-app/main/default/objects/Finance_Report_Records__c/fields/Stage_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Booking__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), TEXT(Demand__r.Booking__r.Stage_of_Booking__c),
If(Not(ISBLANK(Receipt__c)), TEXT(Receipt__r.Booking__r.Stage_of_Booking__c),
If(Not(ISBLANK(Transfer_Amount__c)), TEXT(Transfer_Amount__r.Booking__r.Stage_of_Booking__c),
If(Not(ISBLANK(Registration_Payment_Account__c)), TEXT(Registration_Payment_Account__r.Booking__r.Stage_of_Booking__c), &apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage of Booking</label>
    <type>Text</type>
</CustomField>