force-app/main/default/objects/Finance_Report_Records__c/fields/Step1__c.field-meta.xml
<CustomField>
    <fullName>Step1__c</fullName>
    <formula>IF(AND(OR(Document_Category_New__c=&apos;Credit Note&apos;,Document_Category_New__c=&apos;Debit Note&apos;,Document_Category_New__c=&apos;Receipt&apos;), OR(Receipt_Status__c=&apos;PDC&apos;, Receipt_Status__c=&apos;Dishonored&apos;, Receipt_Status__c=&apos;Cancelled&apos;)),TRUE, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step1</label>
    <type>Checkbox</type>
</CustomField>