force-app/main/default/objects/Finance_Report_Records__c/fields/Step2__c.field-meta.xml
<CustomField>
    <fullName>Step2__c</fullName>
    <formula>IF(AND(Document_Category_New__c=&apos;Receipt&apos;, Receipt_Status__c= &apos;UnProcessed&apos;),true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step2</label>
    <type>Checkbox</type>
</CustomField>