force-app/main/default/objects/Finance_Report_Records__c/fields/Step4__c.field-meta.xml
<CustomField>
    <fullName>Step4__c</fullName>
    <formula>IF(AND(Document_Category_New__c=&apos;Debit Note&apos;, Description__c=&apos;Debit note for DLD Charges&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step4</label>
    <type>Checkbox</type>
</CustomField>