force-app/main/default/objects/Finance_Report_Records__c/fields/Step_6__c.field-meta.xml
<CustomField>
    <fullName>Step_6__c</fullName>
    <formula>IF(OR(Document_Category_New__c=&apos;Credit Note&apos;,Document_Category_New__c=&apos;Debit Note&apos;,Document_Category_New__c=&apos;Receipt&apos;),true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 6</label>
    <type>Checkbox</type>
</CustomField>