force-app/main/default/objects/Finance_Report_Records__c/fields/Transfer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Amount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Amount</label>
    <referenceTo>Transfer_Amount__c</referenceTo>
    <relationshipLabel>Finance Report Records</relationshipLabel>
    <relationshipName>Finance_Report_Records</relationshipName>
    <type>Lookup</type>
</CustomField>