force-app/main/default/objects/Finance_Report_Records__c/fields/Unapplied_Amount_of_Receipt_CN__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_Amount_of_Receipt_CN__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), 0, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), 0,  
If(NOT(ISBLANK(Demand__c)), 0,  
If(NOT(ISBLANK(Receipt__c)), Receipt__r.On_Account_Money_Autocalculated__c,  
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unapplied Amount of Receipt/CN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>