force-app/main/default/objects/Finance_Report_Records__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), Transfer_Amount__r.Unit__r.Name, 
If(NOT(ISBLANK(Registration_Payment_Account__c)), Registration_Payment_Account__r.Unit__r.Name,  
If(NOT(ISBLANK(Demand__c)), Demand__r.Unit__r.Name,  
If(NOT(ISBLANK(Receipt__c)), Receipt__r.Project_Unit__r.Name,  
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit No.</label>
    <type>Text</type>
</CustomField>