force-app/main/default/objects/Finance_Report_Records__c/fields/VAT_Amount_AED__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_AED__c</fullName>
    <formula>If(NOT(ISBLANK(Transfer_Amount__c)), 0, 
If(NOT(ISBLANK(Registration_Payment_Account__c)),0,  
If(NOT(ISBLANK(Demand__c)), Demand__r.Total_Tax_Demanded__c,  
If(NOT(ISBLANK(Receipt__c)), Receipt__r.Tax_Amount__c,  
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Amount (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>