force-app/main/default/objects/Finance_Report_Records__c/fields/X10_Collected_Date_for_Incentive_Date__c.field-meta.xml
<CustomField>
    <fullName>X10_Collected_Date_for_Incentive_Date__c</fullName>
    <formula>IF(  X10_Collected_Date_as_GL_Date__c &gt;=  X10_Collected_Date_as_Receipt_Date__c , X10_Collected_Date_as_Receipt_Date__c,X10_Collected_Date_as_GL_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Collected Date 10%</label>
    <type>Date</type>
</CustomField>