force-app/main/default/objects/Finance_Report_Records__c/fields/X20_Collected_Date_as_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>X20_Collected_Date_as_Receipt_Date__c</fullName>
    <formula>If(Not(ISBLANK(Demand__c)), Demand__r.Booking__r.X20_Collected_Date_as_Per_Receipt_Date__c,
If(Not(ISBLANK(Receipt__c)), Receipt__r.Booking__r.X20_Collected_Date_as_Per_Receipt_Date__c,
If(Not(ISBLANK(Transfer_Amount__c)), Transfer_Amount__r.Booking__r.X20_Collected_Date_as_Per_Receipt_Date__c,
If(Not(ISBLANK(Registration_Payment_Account__c)), Registration_Payment_Account__r.Booking__r.X20_Collected_Date_as_Per_Receipt_Date__c, null))))</formula>
    <label>20% Collected Date as per Receipt Date</label>
    <type>Date</type>
</CustomField>