force-app/main/default/objects/Finance_Report_Records__c/fields/X20_Collected_Date_for_Incentive_Date__c.field-meta.xml
<CustomField>
    <fullName>X20_Collected_Date_for_Incentive_Date__c</fullName>
    <formula>IF(  X20_Collected_Date_as_GL_Date__c &gt;=  X20_Collected_Date_as_Receipt_Date__c , X20_Collected_Date_as_Receipt_Date__c,X20_Collected_Date_as_GL_Date__c)</formula>
    <label>Final Collected Date 20%</label>
    <type>Date</type>
</CustomField>